web/web_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp-svc
spec:
  selector:
    app: webapp
  ports:
  - name: http
    port: 80
    targetPort: 80
  # here we can change the service type as "LoadBalancer", "NodePort" or "ClusterIp"
  type: ClusterIP
